--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
   "dependencies": {
     "@expo-google-fonts/rubik": "^0.2.3",
     "@expo/metro-runtime": "~4.0.1",
+    "@react-native-community/cli": "latest",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "^52.0.37",
+    "expo-dev-client": "~5.0.12",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
